@@ -60,6 +60,7 @@ typedef void (* LogviewNewLinesCallback) (LogviewLog *log,
 
 typedef enum {
   LOGVIEW_ERROR_FAILED,
+  LOGVIEW_ERROR_PERMISSION_DENIED,
   LOGVIEW_ERROR_ZLIB,
   LOGVIEW_ERROR_NOT_SUPPORTED,
   LOGVIEW_ERROR_NOT_A_LOG
